# ai-services-prototype-backend

./: .env.example  pyproject.toml
src/application/grammar_checker/: handlers.py  language_mapping.py
src/application/interfaces/: language_detect_translate.py  text_gears.py  translate_multi_traduction.py  trinka_grammar_checker.py
src/application/translator/: handlers.py
src/config/: settings.py
src/domain/analysis/: entities.py
src/domain/language_detect_translate/: entities.py
src/domain/text_gears/: entities.py
src/domain/translate_multi_traduction/: entities.py
src/domain/trinka_grammar_checker/: entities.py
src/infrastructure/: depends.py  exceptions.py
src/infrastructure/grammar_checker/: text_gears.py  trinka_grammar_checker.py
src/infrastructure/translator/: language_detect_translate.py  translate_multi_traduction.py
src/presentation/: main.py
src/presentation/api/v1/: language_detect_translate.py  translate_multi_traduction.py
src/presentation/api/v1/grammar_checker/analysis/: dto.py  router.py
src/presentation/api/v1/grammar_checker/text_gears/: dto.py  router.py
src/presentation/api/v1/grammar_checker/trinka_grammar_checker/: dto.py  router.py
src/presentation/api/v1/text_gears/: dto.py  text_gears.py
src/presentation/api/v1/trinka_grammar_checker/: dto.py  router.py
tests/application/: test_language_mapping.py
tests/domain/: test_text_gears.py  test_trinka_grammar_checker.py
